--- a/sls/serverless.yml
+++ b/sls/serverless.yml
@@ -19,6 +19,36 @@ functions:
             -   http:
                     path: /api/coins
                     method: get
+    getFiat:
+        handler: src/handlers/getFiat.handler
+        events:
+            -   http:
+                    path: /api/fiat
+                    method: get
+    getPortfolio:
+        handler: src/handlers/getPortfolio.handler
+        events:
+            -   http:
+                    path: /api/portfolio
+                    method: get
+    depositFiat:
+        handler: src/handlers/depositFiat.handler
+        events:
+            -   http:
+                    path: /api/fiat/deposit
+                    method: put
+    buy:
+        handler: src/handlers/buy.handler
+        events:
+            -   http:
+                    path: /api/portfolio/buy
+                    method: put
+    sell:
+        handler: src/handlers/sell.handler
+        events:
+            -   http:
+                    path: /api/portfolio/sell
+                    method: put
 plugins:
     - serverless-offline
     - serverless-plugin-typescript
