--- a/sls/package.json
+++ b/sls/package.json
@@ -2,12 +2,16 @@
   "devDependencies": {
     "@types/aws-sdk": "^2.7.0",
     "@types/axios": "^0.14.0",
-    "serverless-offline": "^6.9.0",
-    "serverless-plugin-typescript": "^1.1.9",
+    "@types/node": "^18.7.13",
     "typescript": "^4.2.3"
   },
   "dependencies": {
     "aws-sdk": "^2.873.0",
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "cfn-resolver-lib": "^1.1.7",
+    "serverless": "^3.22.0",
+    "serverless-appsync-simulator": "^0.20.0",
+    "serverless-offline": "^9.2.6",
+    "serverless-plugin-typescript": "^2.1.2"
   }
 }
